# flannel-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/cni/: Cargo.toml
crates/cni-bridge/: Cargo.toml
crates/cni-bridge/src/: config.rs  contns.rs  hostns.rs  main.rs  plan.rs
crates/cni-flannel/: Cargo.toml
crates/cni-flannel/src/: delegate.rs  exec.rs  main.rs  subnetenv.rs
crates/cni-host-local/: Cargo.toml
crates/cni-host-local/src/: alloc.rs  command.rs  main.rs  store.rs
crates/cni-portmap/: Cargo.toml
crates/cni-portmap/src/: config.rs  main.rs  rules.rs
crates/cni/src/: config.rs  delegate.rs  env.rs  error.rs  iptables.rs  lib.rs  result.rs  version.rs
crates/flanneld/: Cargo.toml
crates/flanneld/src/: annotation.rs  config.rs  ipmasq.rs  kube_mgr.rs  main.rs  netlink.rs  peer.rs  subnet.rs
deploy/: flannel-go.yaml  flannel-rs-release.yaml  flannel-rs.yaml  kind-cluster.yaml
docs/superpowers/plans/: 2026-06-15-flannel-rs.md  2026-06-16-bridge-plugin.md  2026-06-16-flannel-meta-plugin.md  2026-06-16-host-local-ipam.md  2026-06-17-distribution.md  2026-06-17-portmap-plugin.md  2026-06-17-reconcile-test.md  2026-06-18-flannel-parity-tests.md  2026-06-18-lease-backend-parity.md  2026-06-18-watch-based-peers.md
docs/superpowers/specs/: 2026-06-15-flannel-rs-design.md  2026-06-16-bridge-plugin-design.md  2026-06-16-flannel-meta-plugin-design.md  2026-06-16-host-local-ipam-design.md  2026-06-17-distribution-design.md  2026-06-17-portmap-plugin-design.md  2026-06-17-reconcile-test-design.md  2026-06-18-flannel-parity-tests-design.md  2026-06-18-lease-backend-parity-design.md  2026-06-18-watch-based-peers-design.md
tests/conformance/: .gitignore  run.sh
tests/lib/: cluster.sh
tests/smoke/: assert.sh  reconcile.sh  run.sh  workload.yaml
