[package]
name = "cni-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
cni = { path = "../cni" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"
rtnetlink = "0.14"
netlink-packet-route = "0.19"
ipnetwork = "0.20"
nix = { version = "0.29", features = ["sched", "fs"] }
anyhow = "1"
