[package]
name = "flanneld"
version.workspace = true
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
kube = { version = "0.99", features = ["runtime", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnetwork = "0.20"

[dev-dependencies]
